--- a/resources/app.css
+++ b/resources/app.css
@@ -9,6 +9,14 @@
 	line-height: 2em;
 	margin: 0;
 	padding: 0;
+
+	transform: translate3d(0px,0px,0px);
+	-moz-transform: translate3d(0px,0px,0px);
+	-webkit-transform: translate3d(0px,0px,0px);
+
+	backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 }
 
 .todoapp,
