Add react@16 and imba@1.3

--- a/css/interface.css
+++ b/css/interface.css
@@ -143,6 +143,7 @@ iframe {
   width: 100%;
   box-sizing: border-box;
   height: 550px;
+  background: #e8e8e8;
 }
 #apps > div.running iframe {
   border-color: #202837;
